--- a/processor/requirements.txt
+++ b/processor/requirements.txt
@@ -3,5 +3,5 @@ nats-py==2.6.0
 boto3==1.29.7
 httpx==0.25.2
 sentence-transformers==2.2.2
-torch>=2.0.0
-torchvision>=0.15.0
+torch==2.1.0+cpu
+torchvision==0.16.0+cpu
