--- a/processor/requirements.txt
+++ b/processor/requirements.txt
@@ -2,6 +2,4 @@ asyncpg==0.29.0
 nats-py==2.6.0
 boto3==1.29.7
 httpx==0.25.2
-sentence-transformers>=3.0.0
-torch>=2.1.0
-torchvision>=0.16.0
+sentence-transformers==2.2.2
