--- a/processor/requirements.txt
+++ b/processor/requirements.txt
@@ -2,5 +2,5 @@ asyncpg==0.29.0
 nats-py==2.6.0
 boto3==1.29.7
 httpx==0.25.2
-torch==2.1.0+cpu --index-url https://download.pytorch.org/whl/cpu
-sentence-transformers==2.6.0
+torch==1.12.1
+sentence-transformers==2.2.2
