--- a/zerops.yml
+++ b/zerops.yml
@@ -34,6 +34,7 @@ zerops:
       base: python@3.11
       prepareCommands:
         - echo "System info:" && uname -a && python3 --version && pip --version
+        - sudo apt-get update && sudo apt-get install -y build-essential gcc g++
         - sudo uv pip install --system torch==2.1.0 --index-url https://download.pytorch.org/whl/cpu
         - sudo uv pip install --system -r ./processor/requirements.txt
       start: python processor.py
