--- a/zerops.yml
+++ b/zerops.yml
@@ -36,8 +36,8 @@ zerops:
       prepareCommands:
         - echo "System info:" && uname -a && python3 --version && pip --version
         - sudo apt-get update && sudo apt-get install -y build-essential
-        - sudo uv pip install --system torch==2.1.0 --index-url https://download.pytorch.org/whl/cpu
         - sudo uv pip install --system -r ./processor/requirements.txt
+        - sudo uv pip install --system torch --index-url https://download.pytorch.org/whl/cpu --upgrade
       start: python processor.py
 
   - setup: dashboard
