--- a/zerops-import.yml
+++ b/zerops-import.yml
@@ -4,7 +4,7 @@ project:
     # PostgreSQL connection
     DB_HOST: ${db_hostname}
     DB_PORT: ${db_port}
-    DB_NAME: ${db_database}
+    DB_NAME: ${db_dbName}
     DB_USER: ${db_user}
     DB_PASSWORD: ${db_password}
 
